# pointnet2

./: RosClassify.py  export_frozen_graph.py  gen_tfrecords_semantic3D.py  interface_pointnet2.py  resample_cloud.py  to_blocks_working.py  train.py
deploy/: CMakeLists.txt  deploy.cpp
log/: model.ckpt.index  my.py
log_se_ndt_segm/: config.pkl  log_train.txt  model.ckpt.index  se_ndt_segm.py  train.py
log_se_ndt_segm/test/: events.out.tfevents.1544452799.ira-1908  events.out.tfevents.1544452921.ira-1908  events.out.tfevents.1544453065.ira-1908  events.out.tfevents.1544455196.ira-1908  events.out.tfevents.1544460988.ira-1908
log_se_ndt_segm/train/: events.out.tfevents.1544452799.ira-1908  events.out.tfevents.1544452920.ira-1908  events.out.tfevents.1544453064.ira-1908  events.out.tfevents.1544455195.ira-1908
models/: my.py  pointnet2_cls_ssg.py
saved_models/: config.pkl  model.ckpt.index
tf_ops/3d_interpolation/: tf_interpolate.cpp  tf_interpolate.py  tf_interpolate_compile.sh
tf_ops/grouping/: tf_grouping.cpp  tf_grouping.py  tf_grouping_compile.sh  tf_grouping_g.cu
tf_ops/sampling/: .gitignore  CMakeLists.txt  tf_sampling.cpp  tf_sampling.py  tf_sampling_compile.sh  tf_sampling_g.cu
utils/: pointnet_util.py  tf_util.py
